karl package Changelog
======================

Unreleased
----------

- TBD

3.108 (2013-05-06)
------------------

- When emitting alerts or processing digests, deal with 'daily' / 'weekly' /
  'biweekly' frequencies.

- Added 'weekly' and 'biweekly' digest options for community subscriptions.

- Convert profiles' '_pending_alerts' to conflict-resistant
  'appendonly.Accumulator'. (LP #1122349)

3.107 (2013-04-02)
------------------

- Allowed modifying available report columns for peopledirectory reports
  via registering a utility for a new ``karl.views.interfaces.IReportColumns``
  interface.

- Added option for named portlets in intranet middle / right columns.
  To use a named portlet, append '|' plus the adapter name to an item's path.
  (LP #1150171)

- Fixed 'kaltura' tinymce plugin: (LP #1105224).
  
- Fixed 'imagedrawer' tinymce plugin: "TypeError: this.bind is not a function"
  happened and dialog did not open, in case there were no images previously
  uploaded, and the dialog wanted to start with no image currently selected. 

- 'came_from' handling is now dealt with exclusively using a user's session.
  'came_from' no longer leaks to the browser in query strings or hidden form
  fields. (LP #1135630)

- Fixed deletion of multiple items within peopledirectory admin views
  (LP #1144910).

- Fixed ordering of items within peopledirectory admin views (LP #1144889).

- Added a view to dump the event feed as CSV. (LP #1100421).

- Bump contentfeeds buffer from 1000 to 5000 items. (LP #1100421).

3.106 (2013-02-13)
------------------

- Fixed bug where images uploaded to new news items weren't moved from their
  temporary location once the news item was saved.

- Remove old tinymce version 3.3.9.2 from the codebase.

- Remove experimental desktop file synchronization feature.

- Convert GSSErrors due to invalid tickets (some Oxfam browsers send NTLM
  tickets) from errors to warnings in the log to prevent firing off spurious
  alarms.

3.105 (2012-12-07)